Add more routes and update code styles.

--- a/src/styles.css
+++ b/src/styles.css
@@ -47,3 +47,12 @@ h6 {
   font-size: 16px;
   margin-bottom: 0.5em;
 }
+
+h2 code,
+p code {
+  padding: 2px 2px 1px 2px;
+  line-height: 1;
+  background-color: #e6f7ff;
+  border: 1px solid #91d5ff;
+  color: #00588e;
+}
